hphp/hack/test/typecheck/shape_remove_key2.php.exp
File "shape_remove_key2.php", line 24, characters 20-22:
Invalid argument (Typing[4057])
File "shape_remove_key2.php", line 22, characters 3-29:
The field 'x' is missing
